# code

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/base64_uv/: cli.py  server.py
tests/: test_cli.py  test_server.py  test_server_extra.py
